--- a/MacDown/Localization/Base.lproj/MPExportPanelAccessoryViewController.xib
+++ b/MacDown/Localization/Base.lproj/MPExportPanelAccessoryViewController.xib
@@ -6,84 +6,52 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MPExportPanelAccessoryViewController">
             <connections>
-                <outlet property="scriptOptionSelect" destination="xp8-Kc-3ZE" id="cr9-Te-75A"/>
-                <outlet property="stylesheetOptionSelect" destination="T6f-8h-gUf" id="Ezc-Qu-sTW"/>
+                <outlet property="highlightingToggle" destination="nEL-cH-uT8" id="B62-EL-lSO"/>
+                <outlet property="styleToggle" destination="PTZ-5f-xfe" id="zg4-Ih-Fsb"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="268" height="90"/>
+            <rect key="frame" x="0.0" y="0.0" width="229" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T6f-8h-gUf">
-                    <rect key="frame" x="100" y="46" width="151" height="26"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="PTZ-5f-xfe">
+                    <rect key="frame" x="18" y="38" width="193" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="kED-qa-B1B">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="189" id="MaJ-q9-wVG"/>
+                    </constraints>
+                    <buttonCell key="cell" type="check" title="Include styles" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="fod-Ff-UTI">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
-                        <menu key="menu" title="OtherViews" id="XR7-h9-hWg">
-                            <items>
-                                <menuItem title="None" id="cTs-V9-GbE">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="External" id="zrn-gb-7zF">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="Embedded" id="MMT-ie-L9j">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
+                    </buttonCell>
                     <connections>
-                        <binding destination="-2" name="selectedIndex" keyPath="self.stylesheetOption" id="cRM-gy-Mue"/>
+                        <binding destination="-2" name="value" keyPath="self.stylesIncluded" id="cTf-hH-IPq"/>
                     </connections>
-                </popUpButton>
-                <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xp8-Kc-3ZE">
-                    <rect key="frame" x="100" y="15" width="151" height="26"/>
+                </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="nEL-cH-uT8">
+                    <rect key="frame" x="18" y="18" width="193" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="lNs-vq-rnT">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="189" id="fCr-Wo-6hO"/>
+                    </constraints>
+                    <buttonCell key="cell" type="check" title="Include syntax highlighting" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="1f7-JB-VR1">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
-                        <menu key="menu" title="OtherViews" id="fhT-7C-QV1">
-                            <items>
-                                <menuItem title="None" id="SSU-e3-Tpz">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="External" id="ori-OB-QF7">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="Embedded" id="qjC-nF-uoU">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                            </items>
-                        </menu>
-                    </popUpButtonCell>
+                    </buttonCell>
                     <connections>
-                        <binding destination="-2" name="selectedIndex" keyPath="self.scriptOption" id="UB7-Lw-UhR"/>
+                        <binding destination="-2" name="value" keyPath="self.highlightingIncluded" id="3IL-0y-RAg"/>
                     </connections>
-                </popUpButton>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KXL-xW-K8U">
-                    <rect key="frame" x="18" y="51" width="78" height="17"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Stylesheets:" id="DCT-My-HiA">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BBc-bW-RI7">
-                    <rect key="frame" x="18" y="20" width="78" height="17"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Scripts:" id="iD8-Vq-I0a">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
+                </button>
             </subviews>
+            <constraints>
+                <constraint firstItem="nEL-cH-uT8" firstAttribute="top" secondItem="PTZ-5f-xfe" secondAttribute="bottom" constant="6" id="0wC-Ra-TzG"/>
+                <constraint firstItem="PTZ-5f-xfe" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="RC0-AT-wxB"/>
+                <constraint firstItem="nEL-cH-uT8" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="a0t-0v-IS7"/>
+                <constraint firstItem="PTZ-5f-xfe" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="kJR-Ah-kBC"/>
+            </constraints>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="esl-Ae-OeF"/>
     </objects>
