--- a/MacDown/Localization/Base.lproj/MainMenu.xib
+++ b/MacDown/Localization/Base.lproj/MainMenu.xib
@@ -171,6 +171,50 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="uyl-h8-XO2"/>
+                            <menuItem title="Insert HTML Entities" id="p17-UE-4IA">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Insert HTML Entities" id="n1c-du-n8f">
+                                    <items>
+                                        <menuItem title="&amp;" keyEquivalent="7" id="b5k-nv-ZDs">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
+                                            <connections>
+                                                <action selector="insertAmp:" target="-1" id="JWO-aK-Uvi"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="&lt;" keyEquivalent="," id="zSi-NG-D3L">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
+                                            <connections>
+                                                <action selector="insertLt:" target="-1" id="sL8-Qy-kLF"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title=">" keyEquivalent="." id="wbb-Cn-yYW">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
+                                            <connections>
+                                                <action selector="insertGt:" target="-1" id="gWv-bY-uAU"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="Non-Breaking Space" keyEquivalent=" " id="Rkz-py-Fiq">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
+                                            <connections>
+                                                <action selector="insertNbsp:" target="-1" id="6Jn-Ii-DFv"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="&quot;" keyEquivalent="'" id="gpn-zW-cLv">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
+                                            <connections>
+                                                <action selector="insertQuot:" target="-1" id="9GI-BK-kfC"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="'" keyEquivalent="'" id="Im9-FU-qgJ">
+                                            <modifierMask key="keyEquivalentModifierMask" control="YES"/>
+                                            <connections>
+                                                <action selector="insert39:" target="-1" id="o7r-DP-asQ"/>
+                                            </connections>
+                                        </menuItem>
+                                    </items>
+                                </menu>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="NWz-2U-Olb"/>
                             <menuItem title="Find" id="4EN-yA-p0u">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Find" id="1b7-l0-nxx">
@@ -360,9 +404,9 @@
                         </items>
                     </menu>
                 </menuItem>
-                <menuItem title="Actions" id="jxT-CU-nIS">
+                <menuItem title="Format" id="jxT-CU-nIS">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Actions" id="N43-55-MPb">
+                    <menu key="submenu" title="Format" id="N43-55-MPb">
                         <items>
                             <menuItem title="Copy HTML" keyEquivalent="c" id="ts7-v5-Htm">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
@@ -416,7 +460,12 @@
                                     <action selector="toggleInlineCode:" target="-1" id="XJO-7P-4Nh"/>
                                 </connections>
                             </menuItem>
-                            <menuItem isSeparatorItem="YES" id="jLT-fP-2ps"/>
+                            <menuItem title="Comment" keyEquivalent="/" id="i8c-gf-w29">
+                                <connections>
+                                    <action selector="toggleComment:" target="-1" id="7Xw-6O-ibS"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="3UZ-4w-Kqy"/>
                             <menuItem title="Link" keyEquivalent="L" id="GIg-Wo-P8m">
                                 <modifierMask key="keyEquivalentModifierMask" control="YES"/>
                                 <connections>
@@ -429,18 +478,12 @@
                                     <action selector="toggleImage:" target="-1" id="xuX-4U-p9x"/>
                                 </connections>
                             </menuItem>
-                            <menuItem isSeparatorItem="YES" id="E6f-72-5In"/>
                             <menuItem title="New Paragraph" id="zHE-JL-8eu">
                                 <string key="keyEquivalent" base64-UTF8="YES">
 DQ
 </string>
                                 <connections>
                                     <action selector="insertNewParagraph:" target="-1" id="zZY-IZ-9sG"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Comment" keyEquivalent="/" id="i8c-gf-w29">
-                                <connections>
-                                    <action selector="toggleComment:" target="-1" id="7Xw-6O-ibS"/>
                                 </connections>
                             </menuItem>
                         </items>
