--- a/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
+++ b/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
@@ -7,6 +7,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MPHtmlPreferencesViewController">
             <connections>
                 <outlet property="defaultPathControl" destination="bih-Hu-dSj" id="FiF-3m-GSG"/>
+                <outlet property="highlightingThemeSelect" destination="2I4-c8-jan" id="mJf-rt-Jfr"/>
                 <outlet property="stylesheetFunctions" destination="IJe-cc-YKn" id="8M2-zc-OfV"/>
                 <outlet property="stylesheetSelect" destination="Wgm-Sy-7mr" id="Yis-7d-dn6"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -15,11 +16,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="164"/>
+            <rect key="frame" x="0.0" y="0.0" width="405" height="189"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ez-nk-c3q">
-                    <rect key="frame" x="18" y="126" width="87" height="17"/>
+                    <rect key="frame" x="18" y="151" width="87" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CSS:" id="9I3-I7-HLu">
                         <font key="font" metaFont="system"/>
@@ -28,7 +29,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Sy-7mr">
-                    <rect key="frame" x="109" y="121" width="157" height="26"/>
+                    <rect key="frame" x="109" y="146" width="157" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="DYB-rZ-iFG" id="9Mg-zg-Kvi">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -46,7 +47,7 @@
                     </connections>
                 </popUpButton>
                 <segmentedControl horizontalHuggingPriority="300" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IJe-cc-YKn">
-                    <rect key="frame" x="269" y="122" width="118" height="24"/>
+                    <rect key="frame" x="269" y="147" width="118" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <segmentedCell key="cell" alignment="left" style="rounded" trackingMode="momentary" id="0rH-I9-Dxr">
                         <font key="font" metaFont="smallSystem"/>
@@ -83,7 +84,7 @@
                     </connections>
                 </pathControl>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="5mI-gS-xH9">
-                    <rect key="frame" x="109" y="68" width="278" height="18"/>
+                    <rect key="frame" x="109" y="65" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Enable TeX-like math syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="6vg-3f-KWk">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -94,7 +95,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="Zna-RM-nBO">
-                    <rect key="frame" x="109" y="88" width="278" height="18"/>
+                    <rect key="frame" x="109" y="113" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Enable highlighting in code blocks" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="BuQ-02-oQB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -105,7 +106,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HzY-ws-XRq">
-                    <rect key="frame" x="127" y="48" width="260" height="14"/>
+                    <rect key="frame" x="127" y="45" width="260" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Math support requires Internet connection." id="5Ch-dG-juL">
                         <font key="font" metaFont="smallSystem"/>
@@ -113,20 +114,51 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2I4-c8-jan">
+                    <rect key="frame" x="186" y="86" width="202" height="22"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="dvX-w7-kuE">
+                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="smallSystem"/>
+                        <menu key="menu" title="OtherViews" id="xmA-I0-vRJ"/>
+                    </popUpButtonCell>
+                    <connections>
+                        <action selector="changeHighlightingTheme:" target="-2" id="1Ky-pw-JCi"/>
+                        <binding destination="-2" name="enabled" keyPath="self.preferences.htmlSyntaxHighlighting" id="i0o-0b-t8K"/>
+                    </connections>
+                </popUpButton>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dd4-T9-cLi">
+                    <rect key="frame" x="127" y="91" width="56" height="14"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="52" id="Trd-jx-pmE"/>
+                    </constraints>
+                    <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Theme:" id="a6o-qD-AIp">
+                        <font key="font" metaFont="smallSystem"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
+                <constraint firstItem="2I4-c8-jan" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" id="4VK-KY-tAn"/>
                 <constraint firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" constant="20" id="60U-Ld-RXh"/>
                 <constraint firstItem="HzY-ws-XRq" firstAttribute="top" secondItem="5mI-gS-xH9" secondAttribute="bottom" constant="8" id="9Eb-e2-l6K"/>
-                <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="Zna-RM-nBO" secondAttribute="bottom" constant="6" id="AVU-Jx-jCe"/>
+                <constraint firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" constant="20" id="Br9-WO-eJN"/>
+                <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="2I4-c8-jan" secondAttribute="bottom" constant="8" id="CLN-3m-mst"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" id="Hne-bE-ZOU"/>
                 <constraint firstItem="HzY-ws-XRq" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" constant="18" id="J7K-pW-c9s"/>
+                <constraint firstItem="2I4-c8-jan" firstAttribute="top" secondItem="Zna-RM-nBO" secondAttribute="bottom" constant="8" id="JCt-zH-DPb"/>
+                <constraint firstItem="Dd4-T9-cLi" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" constant="18" id="KRr-S2-xD0"/>
                 <constraint firstAttribute="trailing" secondItem="5mI-gS-xH9" secondAttribute="trailing" constant="20" id="Mfw-kE-xOv"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="Wgm-Sy-7mr" secondAttribute="centerY" id="Nqd-iB-6u0"/>
                 <constraint firstItem="Wgm-Sy-7mr" firstAttribute="leading" secondItem="0ez-nk-c3q" secondAttribute="trailing" constant="8" id="QTk-vu-G2t"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="IJe-cc-YKn" secondAttribute="centerY" id="QaR-mb-oSA"/>
                 <constraint firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" constant="20" id="TF6-pi-1W8"/>
+                <constraint firstItem="2I4-c8-jan" firstAttribute="leading" secondItem="Dd4-T9-cLi" secondAttribute="trailing" constant="8" id="VJE-4h-EJh"/>
                 <constraint firstItem="bih-Hu-dSj" firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" id="buC-1V-Gum"/>
                 <constraint firstAttribute="trailing" secondItem="HzY-ws-XRq" secondAttribute="trailing" constant="20" id="c5f-U2-0Oc"/>
+                <constraint firstItem="Dd4-T9-cLi" firstAttribute="centerY" secondItem="2I4-c8-jan" secondAttribute="centerY" id="f5U-Fh-Sc1"/>
                 <constraint firstItem="f62-wu-Z6p" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="fLJ-1K-5pq"/>
                 <constraint firstItem="bih-Hu-dSj" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="leading" id="fwV-Xc-Enc"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="21" id="jph-ZU-s4g"/>
